# robotic-crane

./: .gitignore
backend/: CMakeLists.txt  Readme.md
backend/src/: DOF4_sensor.cpp  DOF4_sensor.hpp  crane_planner.cpp  crane_planner.hpp  crane_simulator.cpp  crane_simulator.hpp  datamodels.hpp  frontend_interface.cpp  frontend_interface.hpp  main.cpp  robotic_crane.cpp  robotic_crane.hpp  updater.cpp  updater.hpp  websocket_server.cpp  websocket_server.hpp
frontend/: Makefile  README.md  index.html  launch.json  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/: backend_interface.ts  index.html  main.ts  three_example.ts  visualizer.ts
